force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>Represents a milestone (report, payment, site visit, etc.) due or received for this grant</description>
    <label>Milestone</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>