force-app/main/default/objects/Milestone__c/fields/Account_black_listed__c.field-meta.xml
<CustomField>
    <fullName>Account_black_listed__c</fullName>
    <description>Checked if this milestone&apos;s account has been marked with one of the three &quot;red flag&quot; indicators: Fraud with GFW, Fraud with peer orgs, or Other</description>
    <formula>Proposal__r.Account_black_listed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this milestone&apos;s account has been marked with one of the three &quot;red flag&quot; indicators: Fraud with GFW, Fraud with peer orgs, or Other</inlineHelpText>
    <label>Account black-listed</label>
    <type>Checkbox</type>
</CustomField>