force-app/main/default/objects/Milestone__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <description>Org name from linked proposal&apos;s Account record</description>
    <formula>Proposal__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Org name from linked proposal&apos;s Account record</inlineHelpText>
    <label>Account name</label>
    <type>Text</type>
</CustomField>