force-app/main/default/objects/Milestone__c/fields/ConstantOne__c.field-meta.xml
<CustomField>
    <fullName>ConstantOne__c</fullName>
    <description>Permanently equal to the number 1 - for use in reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Permanently equal to the number 1 - for use in reports</inlineHelpText>
    <label>Milestone Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>