force-app/main/default/objects/Milestone__c/fields/Country_name__c.field-meta.xml
<CustomField>
    <fullName>Country_name__c</fullName>
    <description>The name of the country, if any, from the parent proposal</description>
    <formula>IF(NOT(ISBLANK(Proposal__r.Country__c)), Proposal__r.Country__r.Name, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the country, if any, from the parent proposal</inlineHelpText>
    <label>Country name</label>
    <type>Text</type>
</CustomField>