force-app/main/default/objects/Milestone__c/fields/Date_accountability_verified__c.field-meta.xml
<CustomField>
    <fullName>Date_accountability_verified__c</fullName>
    <description>The date on which the accountability of the group&apos;s work is verified, for example, that they met basic reporting requirements</description>
    <inlineHelpText>The date on which the accountability of the group&apos;s work is verified, for example, that they met basic reporting requirements</inlineHelpText>
    <label>Date accountability verified</label>
    <type>Date</type>
</CustomField>