force-app/main/default/objects/Milestone__c/fields/Date_acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Date_acknowledged__c</fullName>
    <description>The date on which we acknowledged the milestone (either automatically upon grantee&apos;s online &quot;Submit&quot; OR via an ack letter)</description>
    <inlineHelpText>The date on which we acknowledged the milestone (either automatically upon grantee&apos;s online &quot;Submit&quot; OR via an ack letter)</inlineHelpText>
    <label>Date acknowledged</label>
    <type>Date</type>
</CustomField>