force-app/main/default/objects/Milestone__c/fields/Date_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_completed__c</fullName>
    <description>The date on which the milestone was completed (can be automatically set for Payment milestones)</description>
    <inlineHelpText>The date on which the milestone was completed (can be automatically set for Payment milestones)</inlineHelpText>
    <label>Date completed</label>
    <type>Date</type>
</CustomField>