force-app/main/default/objects/Milestone__c/fields/Date_due__c.field-meta.xml
<CustomField>
    <fullName>Date_due__c</fullName>
    <description>The date by which we should receive the milestone</description>
    <inlineHelpText>The date by which we should receive the milestone</inlineHelpText>
    <label>Date due</label>
    <type>Date</type>
</CustomField>