force-app/main/default/objects/Milestone__c/fields/Date_follow_up_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_follow_up_letter_sent__c</fullName>
    <description>The date on which we sent a follow-up letter</description>
    <inlineHelpText>The date on which we sent a follow-up letter</inlineHelpText>
    <label>Date follow up letter sent</label>
    <type>Date</type>
</CustomField>