force-app/main/default/objects/Milestone__c/fields/Date_follow_up_response_received__c.field-meta.xml
<CustomField>
    <fullName>Date_follow_up_response_received__c</fullName>
    <description>The date on which we received a follow-up response</description>
    <inlineHelpText>The date on which we received a follow-up response</inlineHelpText>
    <label>Date follow up response received</label>
    <type>Date</type>
</CustomField>