force-app/main/default/objects/Milestone__c/fields/Date_milestone_approved__c.field-meta.xml
<CustomField>
    <fullName>Date_milestone_approved__c</fullName>
    <description>The date on which the grantee&apos;s milestone was approved - this can be done before completing the summary and verifying accountability</description>
    <inlineHelpText>The date on which the grantee&apos;s milestone was approved - this can be done before completing the summary and verifying accountability</inlineHelpText>
    <label>Date milestone approved</label>
    <type>Date</type>
</CustomField>