force-app/main/default/objects/Milestone__c/fields/Date_milestone_invalidated__c.field-meta.xml
<CustomField>
    <fullName>Date_milestone_invalidated__c</fullName>
    <description>The date on which this milestone was considered invalid, that is, no longer appropriate for use in grantmaking analyses</description>
    <inlineHelpText>The date on which this milestone was considered invalid, that is, no longer appropriate for use in grantmaking analyses</inlineHelpText>
    <label>Date milestone invalidated</label>
    <type>Date</type>
</CustomField>