force-app/main/default/objects/Milestone__c/fields/Date_of_first_payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_payment__c</fullName>
    <description>Date of actual first payment for this milestone, else the projected payment date</description>
    <formula>BLANKVALUE( Date_of_first_payment_actual__c , Date_due__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of actual first payment for this milestone, else the projected payment date</inlineHelpText>
    <label>Date of first payment</label>
    <type>Date</type>
</CustomField>