force-app/main/default/objects/Milestone__c/fields/Date_of_first_payment_actual__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_payment_actual__c</fullName>
    <description>The actual date of the first payment for this milestone</description>
    <inlineHelpText>The actual date of the first payment for this milestone</inlineHelpText>
    <label>Date of first payment: actual</label>
    <type>Date</type>
</CustomField>