force-app/main/default/objects/Milestone__c/fields/Date_overdue_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_overdue_letter_sent__c</fullName>
    <description>The date on which we sent an overdue letter</description>
    <inlineHelpText>The date on which we sent an overdue letter</inlineHelpText>
    <label>Date overdue letter sent</label>
    <type>Date</type>
</CustomField>