force-app/main/default/objects/Milestone__c/fields/Date_reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_reminder_sent__c</fullName>
    <description>The date on which we sent a reminder letter</description>
    <inlineHelpText>The date on which we sent a reminder letter</inlineHelpText>
    <label>Date reminder sent</label>
    <type>Date</type>
</CustomField>