force-app/main/default/objects/Milestone__c/fields/Date_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_reviewed__c</fullName>
    <description>The date on which the review was completed</description>
    <inlineHelpText>The date on which the review was completed</inlineHelpText>
    <label>Date reviewed</label>
    <type>Date</type>
</CustomField>