force-app/main/default/objects/Milestone__c/fields/Date_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_submitted__c</fullName>
    <description>The date on which this milestone/report was submitted</description>
    <inlineHelpText>The date on which this milestone/report was submitted</inlineHelpText>
    <label>Date submitted</label>
    <type>Date</type>
</CustomField>