force-app/main/default/objects/Milestone__c/fields/Days_milestone_submitted_to_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Days_milestone_submitted_to_reviewed__c</fullName>
    <description>The number of days from date submitted to date reviewed (or to date proposal closed) or to today if date submitted is in the past and the milestone hasn&apos;t yet been reviewed, blank if date submitted is blank</description>
    <formula>IF(
 NOT(ISBLANK( Date_submitted__c )),
 IF(
  NOT(ISBLANK( Date_reviewed__c )),
  Date_reviewed__c - Date_submitted__c ,
  IF(
   Proposal__r.Status_numeric__c &gt;= 10,
   BLANKVALUE(
    Proposal__r.Date_closed_incomplete__c,
    BLANKVALUE(Proposal__r.Date_completed__c, Proposal__r.Date_award_withdrawn__c)
   ) - Date_submitted__c ,
   IF(
    Date_completed__c &lt;= TODAY(),
    TODAY() - Date_submitted__c ,
    null
   )
  )
 ),
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from date submitted to date reviewed (or to date proposal closed) or to today if date submitted is in the past and the milestone hasn&apos;t yet been reviewed, blank if date submitted is blank</inlineHelpText>
    <label>Days milestone submitted to reviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>