force-app/main/default/objects/Milestone__c/fields/Days_reviewed_to_approved__c.field-meta.xml
<CustomField>
    <fullName>Days_reviewed_to_approved__c</fullName>
    <description>The number of days from date reviewed to date approved (or to date proposal closed) or to today if date reviewed is in the past and the milestone hasn&apos;t been approved, blank if date reviewed is blank</description>
    <formula>IF(
 NOT(ISBLANK( Date_reviewed__c )),
 IF(
  NOT(ISBLANK( Date_milestone_approved__c )),
  Date_milestone_approved__c - Date_reviewed__c,
  IF(
   Proposal__r.Status_numeric__c &gt;= 10,
   BLANKVALUE(
    Proposal__r.Date_closed_incomplete__c,
    BLANKVALUE(Proposal__r.Date_completed__c, Proposal__r.Date_award_withdrawn__c)
   ) - Date_reviewed__c,
   IF(
    Date_reviewed__c &lt;= TODAY(),
    TODAY() - Date_reviewed__c,
    null
   )
  )
 ),
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from date reviewed to date approved (or to date proposal closed) or to today if date reviewed is in the past and the milestone hasn&apos;t been approved, blank if date reviewed is blank</inlineHelpText>
    <label>Days reviewed to approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>