force-app/main/default/objects/Milestone__c/fields/Documents_link__c.field-meta.xml
<CustomField>
    <fullName>Documents_link__c</fullName>
    <description>Link (URL) to documents related to this milestone</description>
    <inlineHelpText>Link (URL) to documents related to this milestone</inlineHelpText>
    <label>Documents link</label>
    <type>Url</type>
</CustomField>