force-app/main/default/objects/Milestone__c/fields/Follow_up_questions_for_grantee__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_questions_for_grantee__c</fullName>
    <description>Follow up questions for the grantee, if any</description>
    <inlineHelpText>Follow up questions for the grantee, if any</inlineHelpText>
    <label>Follow up questions for grantee</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>