force-app/main/default/objects/Milestone__c/fields/Future_funding_recommendation__c.field-meta.xml
<CustomField>
    <fullName>Future_funding_recommendation__c</fullName>
    <description>Would you recommend funding to this grantee again? To be completed by MT responsible during accountability verification</description>
    <inlineHelpText>Would you recommend funding to this grantee again? To be completed by MT responsible during accountability verification</inlineHelpText>
    <label>Future funding recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, recommend</fullName>
            </value>
            <value>
                <fullName>Recommend with reservations</fullName>
            </value>
            <value>
                <fullName>Not recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>