force-app/main/default/objects/Milestone__c/fields/GM_Data__c.field-meta.xml
<CustomField>
    <fullName>GM_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The GM Data record linked to this milestone&apos;s parent proposal</description>
    <inlineHelpText>The GM Data record linked to this milestone&apos;s parent proposal</inlineHelpText>
    <label>GM Data</label>
    <referenceTo>GM_Data__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>