force-app/main/default/objects/Milestone__c/fields/Grant_type__c.field-meta.xml
<CustomField>
    <fullName>Grant_type__c</fullName>
    <description>The grant type of the proposal to which this milestone belongs</description>
    <formula>TEXT( Proposal__r.Grant_type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The grant type of the proposal to which this milestone belongs</inlineHelpText>
    <label>Grant type</label>
    <type>Text</type>
</CustomField>