force-app/main/default/objects/Milestone__c/fields/Has_dependent_proposals__c.field-meta.xml
<CustomField>
    <fullName>Has_dependent_proposals__c</fullName>
    <description>Checked if the parent grant of this milestone has dependent proposals</description>
    <formula>Proposal__r.Has_dependent_proposals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the parent grant of this milestone has dependent proposals</inlineHelpText>
    <label>Has dependent proposals</label>
    <type>Checkbox</type>
</CustomField>