force-app/main/default/objects/Milestone__c/fields/Invite_for_renewal__c.field-meta.xml
<CustomField>
    <fullName>Invite_for_renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if we should invite group to renew and include renewal questions (in closing letter and FR acknowledgment letter)</description>
    <inlineHelpText>Checked if we should invite group to renew and include renewal questions (in closing letter and FR acknowledgment letter)</inlineHelpText>
    <label>Invite for renewal</label>
    <type>Checkbox</type>
</CustomField>