force-app/main/default/objects/Milestone__c/fields/Is_most_recent_completed__c.field-meta.xml
<CustomField>
    <fullName>Is_most_recent_completed__c</fullName>
    <description>Checked if this milestone is the most recent completed milestone for this proposal</description>
    <formula>AND(
 NOT(ISBLANK(Date_completed__c)),
 Date_completed__c &gt;= Proposal__r.Date_milestone_completed_recent__c
)</formula>
    <inlineHelpText>Checked if this milestone is the most recent completed milestone for this proposal</inlineHelpText>
    <label>Is most recent completed</label>
    <type>Checkbox</type>
</CustomField>