force-app/main/default/objects/Milestone__c/fields/Is_overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_overdue__c</fullName>
    <description>This milestone is overdue - it has not been completed and we&apos;re past the date due.</description>
    <formula>AND(ISBLANK( Date_completed__c ), NOT(ISBLANK( Date_due__c )),  TODAY() &gt; Date_due__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This milestone is overdue - it has not been completed and we&apos;re past the date due.</inlineHelpText>
    <label>Is overdue</label>
    <type>Checkbox</type>
</CustomField>