force-app/main/default/objects/Milestone__c/fields/Milestone_contact__c.field-meta.xml
<CustomField>
    <fullName>Milestone_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual within the organization who should be contacted with any follow up questions about this milestone</description>
    <inlineHelpText>Individual within the organization who should be contacted with any follow up questions about this milestone</inlineHelpText>
    <label>Milestone contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>