force-app/main/default/objects/Milestone__c/fields/Milestone_Id_CaseSafe__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Id_CaseSafe__c</fullName>
    <description>CaseSafe (18-char) version of this milestone record&apos;s Id</description>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CaseSafe (18-char) version of this milestone record&apos;s Id</inlineHelpText>
    <label>Milestone Id CaseSafe</label>
    <type>Text</type>
</CustomField>