force-app/main/default/objects/Milestone__c/fields/Milestone_Spec__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Spec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone spec part of the proposal&apos;s custom req, if any, that is linked to this milestone</description>
    <inlineHelpText>The milestone spec part of the proposal&apos;s custom req, if any, that is linked to this milestone</inlineHelpText>
    <label>Milestone Spec</label>
    <referenceTo>Milestone_Spec__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>