force-app/main/default/objects/Milestone__c/fields/Milestone_status__c.field-meta.xml
<CustomField>
    <fullName>Milestone_status__c</fullName>
    <description>High level status of this milestone record</description>
    <formula>IF(NOT(ISBLANK( Date_completed__c )), &quot;Completed&quot;,
IF(NOT(ISBLANK( Date_milestone_approved__c )), &quot;Approved&quot;,
IF(NOT(ISBLANK( Date_submitted__c  )), &quot;Submitted&quot;, 
&quot;Pending&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>High level status of this milestone record</inlineHelpText>
    <label>Milestone status</label>
    <type>Text</type>
</CustomField>