force-app/main/default/objects/Milestone__c/fields/Num_overdue_notices_sent__c.field-meta.xml
<CustomField>
    <fullName>Num_overdue_notices_sent__c</fullName>
    <description>The number of overdue notice letters/emails that have been sent for this milestone</description>
    <inlineHelpText>The number of overdue notice letters/emails that have been sent for this milestone</inlineHelpText>
    <label>Num overdue notices sent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>