force-app/main/default/objects/Milestone__c/fields/Organizational_capacity__c.field-meta.xml
<CustomField>
    <fullName>Organizational_capacity__c</fullName>
    <description>(3) Significant organizational growth and capacity building during the grant period with clearly articulated evidence of change (2) Some strengthening, unclear of the effect of the organization or the evidence of change (1) No evidence or change in organizational capacity articulated</description>
    <inlineHelpText>(3) Significant org growth and capacity building during the grant period with clearly articulated evidence of change (2) Some strengthening, unclear of the effect of the org or the evidence of change (1) No evidence or change in org capacity articulated</inlineHelpText>
    <label>Organizational capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Significant strengthening, evidence (3)</fullName>
            </value>
            <value>
                <fullName>Some capacity strengthening (2)</fullName>
            </value>
            <value>
                <fullName>No evidence or change (1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>