force-app/main/default/objects/Milestone__c/fields/Photo_permission__c.field-meta.xml
<CustomField>
    <fullName>Photo_permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then permission has been granted to use the photos from this report</description>
    <inlineHelpText>If checked then permission has been granted to use the photos from this report</inlineHelpText>
    <label>Photo permission</label>
    <type>Checkbox</type>
</CustomField>