force-app/main/default/objects/Milestone__c/fields/Planned_amount__c.field-meta.xml
<CustomField>
    <fullName>Planned_amount__c</fullName>
    <description>The planned amount to be paid for this payment milestone.</description>
    <inlineHelpText>The planned amount to be paid for this payment milestone.</inlineHelpText>
    <label>Planned amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>