force-app/main/default/objects/Milestone__c/fields/Quality_of_report_comment__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_report_comment__c</fullName>
    <description>Statement included for rationale in quality of report ranking. If you do not think the report is a good reflection of the group&apos;s work because of other knowledge, please include comment</description>
    <inlineHelpText>Statement included for rationale in quality of report ranking. If you do not think the report is a good reflection of the group&apos;s work because of other knowledge, please include comment</inlineHelpText>
    <label>Quality of report comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>