force-app/main/default/objects/Milestone__c/fields/Quality_of_report_ranking__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_report_ranking__c</fullName>
    <description>(1) Poor Quality: It is difficult to understand any outcomes or results from the report; (2) Some outcomes but unclear: Report shares outcomes or results but reader is left with questions or lack of clarity in some aspects; (3) Clear and strong: Report shares clear outcomes and results linked to program activities and movement building efforts</description>
    <inlineHelpText>(1) Poor Quality: difficult to understand any outcomes or results from the report; (2) Some outcomes but unclear, lack of clarity; (3) Clear and strong: Report shares clear outcomes and results linked to program activities and movement building efforts</inlineHelpText>
    <label>Quality of report ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor quality (1)</fullName>
            </value>
            <value>
                <fullName>Some outcomes but unclear (2)</fullName>
            </value>
            <value>
                <fullName>Clear and strong (3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>