force-app/main/default/objects/Milestone__c/fields/Reason_milestone_invalidated__c.field-meta.xml
<CustomField>
    <fullName>Reason_milestone_invalidated__c</fullName>
    <description>The reason that this milestone was invalidated, that is, considered no longer appropriate for use in grantmaking analyses</description>
    <inlineHelpText>The reason that this milestone was invalidated, that is, considered no longer appropriate for use in grantmaking analyses</inlineHelpText>
    <label>Reason milestone invalidated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>