force-app/main/default/objects/Milestone__c/fields/Reminder_overdue_number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_overdue_number_of_days__c</fullName>
    <description>Comma-separated list of numbers indicates when to auto-send reminder and overdue emails for forms not yet submitted. For example, &quot;-10, -5, 20&quot; sends reminders 10 and 5 days before date due, and an overdue notice 20 days after date due.</description>
    <inlineHelpText>Comma-separated list of numbers indicates when to auto-send reminder and overdue emails for forms not yet submitted. For example, &quot;-10, -5, 20&quot; sends reminders 10 and 5 days before date due, and an overdue notice 20 days after date due.</inlineHelpText>
    <label>Reminder/overdue number of days</label>
    <type>TextArea</type>
</CustomField>