force-app/main/default/objects/Milestone__c/fields/Review_part_Activities__c.field-meta.xml
<CustomField>
    <fullName>Review_part_Activities__c</fullName>
    <description>That part of the review text that covers activities</description>
    <inlineHelpText>That part of the review text that covers activities</inlineHelpText>
    <label>Review part Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>