force-app/main/default/objects/Milestone__c/fields/Review_part_Author__c.field-meta.xml
<CustomField>
    <fullName>Review_part_Author__c</fullName>
    <description>The name (and optionally title) of the author of the review text (possibly staff, intern, etc.)</description>
    <inlineHelpText>The name (and optionally title) of the author of the review text (possibly staff, intern, etc.)</inlineHelpText>
    <label>Review part Author</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>