force-app/main/default/objects/Milestone__c/fields/Review_part_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Review_part_Capacity__c</fullName>
    <description>That part of the review text that covers organizational capacity/development</description>
    <inlineHelpText>That part of the review text that covers organizational capacity/development</inlineHelpText>
    <label>Review part Capacity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>