force-app/main/default/objects/Milestone__c/fields/Review_part_Context__c.field-meta.xml
<CustomField>
    <fullName>Review_part_Context__c</fullName>
    <description>That part of the review text that covers circumstances and context</description>
    <inlineHelpText>That part of the review text that covers circumstances and context</inlineHelpText>
    <label>Review part Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>