force-app/main/default/objects/Milestone__c/fields/Review_part_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Review_part_Feedback__c</fullName>
    <description>That part of the review text that covers feedback on grantmaking process and philosophy</description>
    <inlineHelpText>That part of the review text that covers feedback on grantmaking process and philosophy</inlineHelpText>
    <label>Review part Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>