force-app/main/default/objects/Milestone__c/fields/Review_part_Impact__c.field-meta.xml
<CustomField>
    <fullName>Review_part_Impact__c</fullName>
    <description>That part of the review text that covers impact</description>
    <inlineHelpText>That part of the review text that covers impact</inlineHelpText>
    <label>Review part Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>