force-app/main/default/objects/Milestone__c/fields/Review_priority__c.field-meta.xml
<CustomField>
    <fullName>Review_priority__c</fullName>
    <description>This milestone review&apos;s priority. The priority is &quot;High&quot; if it is either time-sensitive or there are dependent proposals. Otherwise the priority is &quot;Standard&quot;.</description>
    <formula>IF(
 OR( Time_sensitive__c, Has_dependent_proposals__c ), 
  &quot;2 - High&quot;,
 &quot;1 - Standard&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This milestone review&apos;s priority is &quot;High&quot; if it is either time-sensitive or there are dependent proposals. Otherwise the priority is &quot;Standard&quot;.</inlineHelpText>
    <label>Review priority</label>
    <type>Text</type>
</CustomField>