force-app/main/default/objects/Milestone__c/fields/Review_text__c.field-meta.xml
<CustomField>
    <fullName>Review_text__c</fullName>
    <label>Review text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>