force-app/main/default/objects/Milestone__c/fields/Template_language__c.field-meta.xml
<CustomField>
    <fullName>Template_language__c</fullName>
    <description>Template language from linked proposal</description>
    <formula>Proposal__r.Template_language__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Template language from linked proposal</inlineHelpText>
    <label>Template language</label>
    <type>Text</type>
</CustomField>