force-app/main/default/objects/Milestone__c/fields/Time_sensitive__c.field-meta.xml
<CustomField>
    <fullName>Time_sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this milestone is time sensitive, for example, because a donor report depends on it</description>
    <inlineHelpText>Checked if this milestone is time sensitive, for example, because a donor report depends on it</inlineHelpText>
    <label>Time sensitive</label>
    <type>Checkbox</type>
</CustomField>