force-app/main/default/objects/Milestone__c/validationRules/NonPaymentMilestonePlannedAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>NonPaymentMilestonePlannedAmount</fullName>
    <active>true</active>
    <description>Milestones that are not payments should have blank Planned Amount.</description>
    <errorConditionFormula>AND(
 TEXT(Type__c) &lt;&gt; &quot;Payment&quot;,
 NOT(ISBLANK(Planned_amount__c))
)</errorConditionFormula>
    <errorDisplayField>Planned_amount__c</errorDisplayField>
    <errorMessage>Milestones that are not payments should have blank Planned Amount.</errorMessage>
</ValidationRule>